# clients-app

./: .gitignore  README.md
.claude/: refactor-code (layers-sturcture branch).md
backend/: README.md  STRUCTURE.md  main.py  pyproject.toml
backend/app/: database.py  main.py
backend/app/api/: deps.py
backend/app/api/routes/: admin.py  auth.py  client.py
backend/app/core/: config.py  security.py  utils.py
backend/app/models/: client.py  meeting.py  token.py  user.py
backend/app/services/: client_service.py  meeting_service.py  user_service.py  utils.py
backend/app/tests/: test-client-add.py  test-meeting-add.py
backend/repositories/: __init__.py  client_repository.py  meeting_repository.py  user_repository.py
backend/scripts/: activate.sh  deactivate.sh  get_schema.py  populate_users.py  somthing.ipynb
frontend/app/: page.tsx
